--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+exclude: '.*\.key'
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v3.2.0
@@ -5,3 +6,10 @@ repos:
   - id: trailing-whitespace
   - id: end-of-file-fixer
   - id: check-yaml
+
+repos:
+ - repo: https://github.com/frnmst/md-toc
+   rev: master  # or a specific git tag from md-toc
+   hooks:
+   - id: md-toc
+     args: [-p, --skip-lines, '1', github]
